[package]
name = "unifiers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "cookies", "json"] }
clap = { version = "4.4.0", features = ["derive"] }
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.47"
config = { version = "0.13.3", features = ["toml"] }
